docs(roadmap): the U0–U2 upstream catch-up and the S/C annotation debt
Kernel 0.11.0 and SDK 0.10.0 both released, and both moved off the JDK this
repo pins, so 0.7.0 gains a forced toolchain track and 0.8.0 gains the debt
an evidence survey of the annotation surface turned up.

U0–U2 are sequential and the order is forced rather than preferred: kernel
0.10.2 was class-file major 70 with preview-stamped classes in
exeris-kernel-core, which JDK 25 refuses outright, so the pin bump had to
land before the LTS descent could compile at all. U1 is what unblocks LTS
consumers — SDK 0.10.0's own notes name this repo as the remaining stop.

The S/C block records what the survey found: the processor names 21 of ~44
SDK annotations. S1 is singled out as a defect rather than a gap, because
`@Saga.version` never reaching `SagaMetadata` was cosmetic until kernel 0.11
/ ADR-064 started keying the plan catalog by (name, version) and failing
closed on an unregistered one.

C0 leads the C phase deliberately: strict mode reports extracted-but-
unconsumed attributes and is blind to ones never extracted, which is why
INERT_ATTRIBUTES holds 2 entries against ~23 uncovered annotations. Fixing
the audit closes the class instead of the instances.

Also records why the two kernel distribution lines are NOT a codegen fork —
of the 46 kernel types the emitters name, only EventBus (javadoc) and
MemoryStats (the `value` modifier) differ, and tooling emits no pom.xml —
while keeping the separate question of emitting Valhalla shapes ourselves
open, deferred by decision rather than blocked.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>